--- a/ElevenNoteWebMVC/Views/Note/Create.cshtml
+++ b/ElevenNoteWebMVC/Views/Note/Create.cshtml
@@ -25,8 +25,8 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-lg-10">
+                @Html.TextAreaFor(model => model.Content, 15, 10, htmlAttributes: new { style = "width: 70%; max-width: 100%;" })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
